use NewMap as default level, remove root privilege since we're not using Linux containers now

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/NewMap.NewMap
+GlobalDefaultGameMode=/Script/SimlViz.SimlVizGameModeBase
+EditorStartupMap=/Game/NewMap.NewMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -14,4 +15,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/SimlViz")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/SimlViz")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="SimlVizGameModeBase")
+
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=VisualStudio2019
 
