--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,3 +9,6 @@ Homepage="https://www.dimensionlab.org/"
 SupportContact=hello@dimensionlab.org
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "CC7DBD62524FFDBB7018E59551FC2D47", "SimViz")
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
