--- a/SimlViz.uproject
+++ b/SimlViz.uproject
@@ -20,5 +20,14 @@
 			"Name": "PixelStreaming",
 			"Enabled": true
 		}
+	],
+	"TargetPlatforms": [
+		"Android",
+		"AllDesktop",
+		"HoloLens",
+		"LinuxNoEditor",
+		"LinuxAArch64NoEditor",
+		"MacNoEditor",
+		"WindowsNoEditor"
 	]
 }
